// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ModalSelect Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "overflow": "hidden",
    }
  }
  testID="modal-select"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "height": 64,
          "justifyContent": "center",
          "paddingHorizontal": 32,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 24,
          },
          false,
          false,
        ]
      }
    >
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 16,
            "left": 16,
            "right": 16,
            "top": 16,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="close-modal"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color="#546E7A"
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="#546E7A"
          vbHeight={24}
          vbWidth={24}
          width={16}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
              fill={
                Array [
                  0,
                  4283723386,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "paddingBottom": 32,
          "paddingHorizontal": 32,
        },
        undefined,
        undefined,
        Object {
          "paddingHorizontal": 0,
        },
      ]
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      data={
        Array [
          Object {
            "_id": "1",
            "text": "Play Store",
            "value": "play_store",
          },
          Object {
            "_id": "2",
            "text": "App Store",
            "value": "app_store",
          },
          Object {
            "_id": "3",
            "text": "Apple Store",
            "value": "apple_store",
          },
          Object {
            "_id": "4",
            "text": "Pineapple Store",
            "value": "pineapple_store",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "width": "100%",
        }
      }
      testID="modal-select-items"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-1"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Play Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-2"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              App Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-3"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Apple Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-4"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Pineapple Store
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Storyshots ModalSelect With value 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderRadius": 5,
      "overflow": "hidden",
    }
  }
  testID="modal-select"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "flex-end",
          "backgroundColor": "#FFFFFF",
          "height": 64,
          "justifyContent": "center",
          "paddingHorizontal": 32,
        },
        Object {
          "backgroundColor": undefined,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "paddingLeft": 24,
          },
          false,
          false,
        ]
      }
    >
      <View
        accessible={true}
        hitSlop={
          Object {
            "bottom": 16,
            "left": 16,
            "right": 16,
            "top": 16,
          }
        }
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="close-modal"
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          color="#546E7A"
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              undefined,
              null,
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          tintColor="#546E7A"
          vbHeight={24}
          vbWidth={24}
          width={16}
        >
          <RNSVGGroup
            fill={
              Array [
                0,
                4278190080,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            font={Object {}}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={Array []}
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth={1}
            vectorEffect={0}
            x={0}
            y={0}
          >
            <RNSVGPath
              d="M0 0h24v24H0z"
              fill={null}
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
            <RNSVGPath
              d="M21.456 5.414l-2.829-2.828-6.585 6.586-6.586-6.586-2.829 2.828L9.213 12l-6.586 6.586 2.829 2.828 6.586-6.586 6.585 6.586 2.829-2.828L14.87 12z"
              fill={
                Array [
                  0,
                  4283723386,
                ]
              }
              fillOpacity={1}
              fillRule={1}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  0,
                  0,
                ]
              }
              opacity={1}
              originX={0}
              originY={0}
              propList={
                Array [
                  "fill",
                ]
              }
              rotation={0}
              scaleX={1}
              scaleY={1}
              skewX={0}
              skewY={0}
              stroke={null}
              strokeDasharray={null}
              strokeDashoffset={null}
              strokeLinecap={0}
              strokeLinejoin={0}
              strokeMiterlimit={4}
              strokeOpacity={1}
              strokeWidth={1}
              vectorEffect={0}
              x={0}
              y={0}
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "paddingBottom": 32,
          "paddingHorizontal": 32,
        },
        undefined,
        undefined,
        Object {
          "paddingHorizontal": 0,
        },
      ]
    }
  >
    <RCTScrollView
      ItemSeparatorComponent={[Function]}
      data={
        Array [
          Object {
            "_id": "1",
            "text": "Play Store",
            "value": "play_store",
          },
          Object {
            "_id": "2",
            "text": "App Store",
            "value": "app_store",
          },
          Object {
            "_id": "3",
            "text": "Apple Store",
            "value": "apple_store",
          },
          Object {
            "_id": "4",
            "text": "Pineapple Store",
            "value": "pineapple_store",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={10}
      keyExtractor={[Function]}
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsVerticalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "width": "100%",
        }
      }
      testID="modal-select-items"
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-1"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Play Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-2"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    Object {
                      "color": "#00B0FF",
                    },
                  ],
                ]
              }
            >
              App Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-3"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Apple Store
            </Text>
          </View>
          <View
            style={
              Object {
                "borderColor": "rgba(0, 0, 0, 0.1)",
                "borderTopWidth": 1,
              }
            }
          />
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="modal-select-item-4"
          >
            <Text
              style={
                Array [
                  Object {},
                  Array [
                    Object {
                      "color": "#14171A",
                      "fontWeight": "700",
                    },
                    false,
                  ],
                ]
              }
            >
              Pineapple Store
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
